update code by tosave to postgresDB finishing!

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,10 @@ STORJ_SECRET_KEY=j2ocrcyhjn6nezadu4bisykdciylc5mwvl3jlkcm7i5nwnsrb6jta
 STORJ_BUCKET=my-bucket
 STORJ_ENDPOINT=https://gateway.storjshare.io
 PORT=4000
+
+# postgres
+PGUSER=postgres
+PGPASSWORD=252544
+PGHOST=localhost
+PGDATABASE=testdb
+PGPORT=5432
