--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.815.0",
     "aws-sdk": "^2.1692.0",
+    "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
